--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dfba/schema",
     "description": "Read database schema, table and column metadata in Laravel or plain PHP.",
     "require": {
-        "doctrine/dbal": "^2.5"
+        "nesbot/carbon": "~1.20"
     },
     "license": "MIT",
     "authors": [
